firefox-branding-iceweasel (0.3.3) unstable; urgency=low

  * Marked as multiprocess-compatible.

 -- nord-stream <nord-stream@ochaken.jp.eu.org>  Mon, 13 Jun 2016 15:39:10 +0000

firefox-branding-iceweasel (0.3.2) unstable; urgency=low

  * Initial Debian packaging.  (Closes: #821210)
  * Removed support for older Firefox releases (<45.0).

 -- nord-stream <nord-stream@ochaken.jp.eu.org>  Sun, 29 May 2016 15:06:11 +0000