@@ -13,7 +13,4 @@
  Iceweasel, and Iceweasel does have a historical value. So this rebranding
  package was created to restore Iceweasel branding for Firefox. Most files were
  just copied from the original Iceweasel package.
- 
-## TODO
 
-* Ship a .desktop file in some way
