@@ -1,0 +1,2 @@
+iceweasel.desktop usr/share/applications
+firefox-esr.desktop usr/share/applications
