@@ -1,0 +1,9 @@
+#!/bin/sh -e
+
+package=xul-ext-iceweasel-branding
+if [ "$1" = "remove" ]; then
+    dpkg-divert --package "$package" --rename --remove /usr/share/applications/iceweasel.desktop
+    dpkg-divert --package "$package" --rename --remove /usr/share/applications/firefox-esr.desktop
+fi
+
+#DEBHELPER#
