@@ -1,0 +1,9 @@
+#!/bin/sh -e
+
+package=xul-ext-iceweasel-branding
+if [ "$1" = "upgrade" ] || [ "$1" = "install" ] ; then
+    dpkg-divert --package "$package" --divert /usr/share/applications/iceweasel.desktop.diverted --rename /usr/share/applications/iceweasel.desktop
+    dpkg-divert --package "$package" --divert /usr/share/applications/firefox-esr.desktop.diverted --rename /usr/share/applications/firefox-esr.desktop
+fi
+
+#DEBHELPER#
