@@ -1,0 +1,105 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=Iceweasel
+Name[bg]=Iceweasel
+Name[ca]=Iceweasel
+Name[cs]=Iceweasel
+Name[el]=Iceweasel
+Name[es]=Iceweasel
+Name[fa]=Iceweasel
+Name[fi]=Iceweasel
+Name[fr]=Iceweasel
+Name[hu]=Iceweasel
+Name[it]=Iceweasel
+Name[ja]=Iceweasel
+Name[ko]=Iceweasel
+Name[nb]=Iceweasel
+Name[nl]=Iceweasel
+Name[nn]=Iceweasel
+Name[no]=Iceweasel
+Name[pl]=Iceweasel
+Name[pt]=Iceweasel
+Name[pt_BR]=Iceweasel
+Name[ru]=Iceweasel
+Name[sk]=Iceweasel
+Name[sv]=Iceweasel
+Comment=Browse the World Wide Web
+Comment[bg]=Сърфиране в Мрежата
+Comment[ca]=Navegueu per el web
+Comment[cs]=Prohlížení stránek World Wide Webu
+Comment[de]=Im Internet surfen
+Comment[el]=Περιηγηθείτε στον παγκόσμιο ιστό
+Comment[es]=Navegue por la web
+Comment[fa]=صفحات شبکه جهانی اینترنت را مرور نمایید
+Comment[fi]=Selaa Internetin WWW-sivuja
+Comment[fr]=Navigue sur Internet
+Comment[hu]=A világháló böngészése
+Comment[it]=Esplora il web
+Comment[ja]=ウェブを閲覧します
+Comment[ko]=웹을 돌아 다닙니다
+Comment[nb]=Surf på nettet
+Comment[nl]=Verken het internet
+Comment[nn]=Surf på nettet
+Comment[no]=Surf på nettet
+Comment[pl]=Przeglądanie stron WWW 
+Comment[pt]=Navegue na Internet
+Comment[pt_BR]=Navegue na Internet
+Comment[ru]=Обозреватель Всемирной Паутины
+Comment[sk]=Prehliadanie internetu
+Comment[sv]=Surfa på webben
+GenericName=Web Browser
+GenericName[bg]=Интернет браузър
+GenericName[ca]=Navegador web
+GenericName[cs]=Webový prohlížeč
+GenericName[de]=Webbrowser
+GenericName[el]=Περιηγητής ιστού
+GenericName[es]=Navegador web
+GenericName[fa]=مرورگر اینترنتی
+GenericName[fi]=WWW-selain
+GenericName[fr]=Navigateur Web
+GenericName[hu]=Webböngésző
+GenericName[it]=Browser Web
+GenericName[ja]=ウェブ・ブラウザ
+GenericName[ko]=웹 브라우저
+GenericName[nb]=Nettleser
+GenericName[nl]=Webbrowser
+GenericName[nn]=Nettlesar
+GenericName[no]=Nettleser
+GenericName[pl]=Przeglądarka WWW
+GenericName[pt]=Navegador Web
+GenericName[pt_BR]=Navegador Web
+GenericName[ru]=Интернет-браузер
+GenericName[sk]=Internetový prehliadač
+GenericName[sv]=Webbläsare
+X-GNOME-FullName=Iceweasel Web Browser
+X-GNOME-FullName[bg]=Интернет браузър (Iceweasel)
+X-GNOME-FullName[ca]=Navegador web Iceweasel
+X-GNOME-FullName[cs]=Iceweasel Webový prohlížeč
+X-GNOME-FullName[el]=Περιηγήτης Ιστού Iceweasel
+X-GNOME-FullName[es]=Navegador web Iceweasel
+X-GNOME-FullName[fa]=مرورگر اینترنتی Iceweasel
+X-GNOME-FullName[fi]=Iceweasel-selain
+X-GNOME-FullName[fr]=Navigateur Web Iceweasel
+X-GNOME-FullName[hu]=Iceweasel webböngésző
+X-GNOME-FullName[it]=Iceweasel Browser Web
+X-GNOME-FullName[ja]=Iceweasel ウェブ・ブラウザ
+X-GNOME-FullName[ko]=Iceweasel 웹 브라우저
+X-GNOME-FullName[nb]=Iceweasel Nettleser
+X-GNOME-FullName[nl]=Iceweasel webbrowser
+X-GNOME-FullName[nn]=Iceweasel Nettlesar
+X-GNOME-FullName[no]=Iceweasel Nettleser
+X-GNOME-FullName[pl]=Przeglądarka WWW Iceweasel
+X-GNOME-FullName[pt]=Iceweasel Navegador Web
+X-GNOME-FullName[pt_BR]=Navegador Web Iceweasel
+X-GNOME-FullName[ru]=Интернет-браузер Iceweasel
+X-GNOME-FullName[sk]=Internetový prehliadač Iceweasel
+X-GNOME-FullName[sv]=Webbläsaren Iceweasel
+Exec=iceweasel --class Iceweasel %u
+Terminal=false
+X-MultipleArgs=false
+Type=Application
+Icon=iceweasel
+Categories=Network;WebBrowser;
+MimeType=text/html;text/xml;application/xhtml+xml;application/xml;application/vnd.mozilla.xul+xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;
+StartupWMClass=Iceweasel
+StartupNotify=true
